tests/baselines/reference/accessorsInAmbientContext.errors.txt
==== tests/cases/compiler/accessorsInAmbientContext.ts (8 errors) ====
    
    declare module M {
        class C {
            get X() { return 1; }
                ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
            set X(v) { }
                ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    
            static get Y() { return 1; }
                       ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
            static set Y(v) { }
                       ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
        }
    }
    
    declare class C {
        get X() { return 1; }
            ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
        set X(v) { }
            ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    
        static get Y() { return 1; }
                   ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
        static set Y(v) { }
                   ~
!!! error TS1086: An accessor cannot be declared in an ambient context.
    }